[package]
name = "zaoai-types"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
log = "0.4.27"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0"
serde-xml-rs = "0.8.1"
serde_json = "1.0.141"
humantime-serde = "1.1.1"
sonogram = "0.7.1"
symphonia = {version = "0.5.0", features = ["mp3", "mkv", "pcm", "aac"]}
symphonia-bundle-mp3 = "0.5.0"
symphonia-format-mkv = "0.5.0"
symphonia-codec-aac = "0.5.0"
symphonia-codec-pcm = "0.5.0"
tempfile = "3.20.0"
